# rust_actix_web_sqlx

./: .gitignore  Cargo.toml  README.md  hoge.txt
client/: .gitignore  README.md  package-lock.json  package.json
client/src/: App.tsx
client/src/__test__/: App.test.tsx  Header.test.tsx  Main.test.tsx  SignIn.test.tsx
client/src/components/: Header.tsx  Layout.tsx  Main.tsx  Sample.tsx  SignIn.tsx  SignOut.tsx
client/src/mock/: index.ts
client/src/queries/: index.ts
sql/mysql/: create_table.sql  insert_data.sql
sql/sqlite/: create_table.sql  insert_data.sql
sqlite_db/: sample.db
src/: errors.rs  lib.rs  main.rs  routes.rs  structs.rs
src/databases/: mysql.rs  sqlite.rs
src/routes/: auth.rs  sample.rs
