[package]
name = "rust_actix_web_sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.1.0"
serde = { version = "1.0.141", features = ["derive"] }
sqlx = { version = "0.6.0", features = ["macros", "runtime-actix-rustls", "mysql", "sqlite"] }
thiserror = "1.0.31"
tracing = "0.1.36"
